NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

V0.93
- Added : Check for minimum 8 MB Memory
- Changed : Priority from wpautop must be before gallery
- Bugfix : Change PHP short tag (Thx to Archedition)
- Bugfix : Remove tab.png from CSS (Thx to Frisco)
- Bugfix : Remove newline and encode quotes in Media-Upload (THX to Trip Mellinger)

V0.92 - 30.03.2008
- Changed : Higher priority for filter in WP2.5 final
- Changed : Do not increase memory_limit with ini_set
- Added : Read EXIF field ImageDescription

V0.91 - 24.03.2008
- Changed : Resample mode back to 3
- Changed : Add DIV "ngg-singlepic-wrapper" for SingelPic (THX to Travel-Junkie)
- Changed : Increase Tweakfactor for Memory Check
- Bugfix : Use admin.css only on NextGEN pages (THX tp Oliver)
- Bugfix : Updates widgets (V1.21) for ImageRotator 3.15
- Bugfix : Change order of rewrite rules for WP 2.5
- Bugfix : Include Dashboard CSS also for page "nextgen-gallery"

V0.90 - 18.03.2008
- NEW : Sort order for images
- NEW : Updated style for Wp 2.5
- NEW : Media upload tab integration for WP 2.5
- Added   : Change wp shortcode filter 
- Added   : TinyMCE V3 Button for WordPress 2.5
- Added   : Singlepic center class 
- Changed : New default parameter for ImageRotator 3.15
- Changed : By default enable metadata import
- Changed : Moved disable/enable flash setting to add gallery
- Changed : wpdb->escape gallerytag in nggfunctions
- Changed : Sort files after scan folder
- Changed : Check for filename during upload
- Changed : Remove jQuery plugin for navigation
- Changed : Remove myGallery import
- Changed : Resample mode default set to 5, causes problems at PHP 4.4.8 /PHP 5.2.4
- Bugfix  : nggextractXML missing stripslashes
- Bugfix  : P tags not closed in manage.php
- Bugfix  : Remove " from singlepic class
- Bugfix  : Rewrite rule for ImageBrowser added

V0.83 - 14.02.2008
- Changed : New Interfaces.js from WP Core 2.5, for sortable bug under IE7